--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -111,63 +111,93 @@
 					var enData0 = {};
 					//不需要加密的数据
 					var comData0 = {
-						uuid: publicParameter.uuid, //用户设备号
-						utid: personal.utid, //用户ID
+//						uuid: publicParameter.uuid, //用户设备号
+//                      utid: personal.utid, //用户ID
+//                      type: 'upw', //修改类型，upw:密码
+//                      val: params.newPassword, //对应类型的值
+//                      utoken: personal.utoken, //用户令牌
+//                      appid: publicParameter.appid //系统所分配的应用ID
+
+						
+						
+						platform_code: window.storageKeyName.PLATFORMCODE, //平台代码
+						app_code: window.storageKeyName.APPCODE, //应用系统代码
 						type: 'upw', //修改类型，upw:密码
 						val: params.newPassword, //对应类型的值
-						utoken: personal.utoken, //用户令牌
-						appid: publicParameter.appid //系统所分配的应用ID
+						access_token: personal.utoken //用户令牌
 					};
 					events.showWaiting();
-					if(personal.utp == 0) { //0老师，1学生，2家长
-						//发送网络请求，data为网络返回值
-						postDataEncry(0,'UpTecInfo', enData0, comData0, 0, function(data) {
-							console.log('UpTecInfo:' + JSON.stringify(data));
-							events.closeWaiting();
-							if(data.RspCode == 0) {
-								personal.passWord0 = params.newPassword;
-								store.set(window.storageKeyName.PERSONALINFO, personal);
-								params.oldPassword = '';
-								params.newPassword = '';
-								params.confirmPassword = '';
-								if(pageFlag == 0) {
-									mui.back();
-								} else {
-									plus.webview.open('../../html/index/home.html');
-//									utils.hrefSessionStorage('../../html/index/home.html', {});
-									var curr = plus.webview.currentWebview();
-									curr.close();
-								}
+//					if(personal.utp == 0) { //0老师，1学生，2家长
+//						//发送网络请求，data为网络返回值
+//						postDataEncry(0,'UpTecInfo', enData0, comData0, 0, function(data) {
+//							console.log('UpTecInfo:' + JSON.stringify(data));
+//							events.closeWaiting();
+//							if(data.RspCode == 0) {
+//								personal.passWord0 = params.newPassword;
+//								store.set(window.storageKeyName.PERSONALINFO, personal);
+//								params.oldPassword = '';
+//								params.newPassword = '';
+//								params.confirmPassword = '';
+//								if(pageFlag == 0) {
+//									mui.back();
+//								} else {
+//									plus.webview.open('../../html/index/home.html');
+////									utils.hrefSessionStorage('../../html/index/home.html', {});
+//									var curr = plus.webview.currentWebview();
+//									curr.close();
+//								}
+//							} else {
+//								mui.toast(data.RspTxt);
+//							}
+//						});
+//					} else {
+//						//发送网络请求，data为网络返回值
+//						postDataEncry(0,'UpUserInfo', enData0, comData0, 0, function(data) {
+//							console.log('UpUserInfo:' + JSON.stringify(data));
+//							events.closeWaiting();
+//							if(data.RspCode == 0) {
+//								personal.passWord0 = params.newPassword;
+//								store.set(window.storageKeyName.PERSONALINFO, personal);
+//								params.oldPassword = '';
+//								params.newPassword = '';
+//								params.confirmPassword = '';
+//								if(pageFlag == 0) {
+//									mui.back();
+//								} else {
+//									plus.webview.open('../../html/index/home.html');
+////									utils.hrefSessionStorage('../../html/index/home.html', {});
+//									var curr = plus.webview.currentWebview();
+//									curr.close();
+//								}
+//							} else {
+//								mui.toast(data.RspTxt);
+//							}
+//						});
+//					}
+					postDataEncry(1, 'upUserInfo', {}, comData0, 0, function(data3) {
+						console.log('data3:' + JSON.stringify(data3));
+						events.closeWaiting();
+						if(data3.code == 'SUCCESS') {
+							personal.passWord0 = params.newPassword;
+							store.set(window.storageKeyName.PERSONALINFO, personal);
+							params.oldPassword = '';
+							params.newPassword = '';
+							params.confirmPassword = '';
+							if(pageFlag == 0) {
+								mui.back();
 							} else {
-								mui.toast(data.RspTxt);
-							}
-						});
-					} else {
-						//发送网络请求，data为网络返回值
-						postDataEncry(0,'UpUserInfo', enData0, comData0, 0, function(data) {
-							console.log('UpUserInfo:' + JSON.stringify(data));
-							events.closeWaiting();
-							if(data.RspCode == 0) {
-								personal.passWord0 = params.newPassword;
-								store.set(window.storageKeyName.PERSONALINFO, personal);
-								params.oldPassword = '';
-								params.newPassword = '';
-								params.confirmPassword = '';
-								if(pageFlag == 0) {
-									mui.back();
-								} else {
-									plus.webview.open('../../html/index/home.html');
+								plus.webview.open('../../html/index/home.html');
 //									utils.hrefSessionStorage('../../html/index/home.html', {});
-									var curr = plus.webview.currentWebview();
-									curr.close();
-								}
-							} else {
-								mui.toast(data.RspTxt);
+								var curr = plus.webview.currentWebview();
+								curr.close();
 							}
-						});
-					}
+						} else {
+							mui.toast(data3.msg);
+						}
+					});
 				}
 			}
+			
 
 			//将输入表单中的内容，转为obj
 			$.fn.serializeObject = function() {
