--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -121,7 +121,7 @@
 					postDataEncry(0, 'upUserInfo', {}, comData0, 0, function(data3) {
 						console.log('data3:' + JSON.stringify(data3));
 						events.closeWaiting();
-						if(data3.code == 'SUCCESS') {
+						if(data3.RspCode == 0) {
 							personal.passWord0 = params.newPassword;
 							store.set(window.storageKeyName.PERSONALINFO, personal);
 							params.oldPassword = '';
@@ -136,7 +136,7 @@
 								curr.close();
 							}
 						} else {
-							mui.toast(data3.msg);
+							mui.toast(data3.RspTxt);
 						}
 					});
 				}
