--- a/wisdomCampus/html/studentManage/student-comment-add.html
+++ b/wisdomCampus/html/studentManage/student-comment-add.html
@@ -547,7 +547,7 @@
 					if(data1.RspCode == 0) {
 						console.log("3.4 系统学期:" + JSON.stringify(data1));
 						if(data1.RspData) {
-							var termList = data1.RspData.systerm;
+							var termList = data1.RspData;
 							var newList = [];
 							for(var i = 0; i < termList.length; i++) {
 								var temp = {
