--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -626,17 +626,15 @@
 				var publicPar = store.get(window.storageKeyName.PUBLICPARAMETER);
 				//不需要加密的数据
 				var comData1 = {
-					uuid: publicParameter.uuid, //用户设备号
-					utoken: personal.utoken, //用户令牌
-					appid: publicParameter.appid //系统所分配的应用ID
+					access_token: personal.utoken, //用户令牌
 				};
 				//登录
-				postDataEncry(0,'SchSub', enData1, comData1, 0, function(data1) {
+				postDataEncry(1,'api/sub/list', enData1, comData1, 0, function(data1) {
 					wd.close();
 					if(data1.RspCode == 0) {
 						console.log("data1:" + data1.RspTxt);
 						if(data1.RspData) {
-							var kmList = data1.RspData.subs;
+							var kmList = data1.RspData;
 							var newList = [];
 							for(var i = 0; i < kmList.length; i++) {
 								var temp = {
